Fixed bug: loading cube doesnt show on mobile
Added a class 'full-screen' to the body that is only activated when the
data is laoded to the table. This allows the loading cube to be
displayed properly on mobile.

--- a/css/base.css
+++ b/css/base.css
@@ -22,7 +22,10 @@ body {
 
 @media screen and (max-width: 800px) {
   body {
-    height:  100vh;
     padding: 3vw 3vw;
+  }
+
+  body.full-screen {
+    height: 100vh;
   }
 }
